--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     buildFeatures{
         viewBinding true
     }
-    
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -40,16 +40,26 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
 
     implementation "com.google.mlkit:face-detection:16.0.5"
     implementation "com.google.android.gms:play-services-mlkit-face-detection:16.1.4"
 
-    // Camera
-    implementation "com.otaliastudios:cameraview:1.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
+
+    implementation "androidx.camera:camera-core:1.1.0-alpha02"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha02"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha02"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha22"
+    implementation 'androidx.camera:camera-view:1.0.0-alpha22'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
