--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     // Camera
     implementation "com.otaliastudios:cameraview:1.5.1"
+    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
