--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.activity:activity-ktx:1.2.1'
+    implementation 'androidx.fragment:fragment-ktx:1.3.1'
 
     implementation "com.google.mlkit:face-detection:16.0.5"
     implementation "com.google.android.gms:play-services-mlkit-face-detection:16.1.4"
